objects/tffa__Declaration__c.object
<CustomObject>
    <description>Supports the capture of a list of declarations which the customer needs to give his acceptance before opening the account. List of declarations is fetched from declaration checklist (maintained as a questionnaire).</description>
    <fields>
        <fullName>tffa__Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this declaration has been accepted by the propsect or customer.</description>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier. Typically derived from QuestionTemplate.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Comments__c</fullName>
        <description>Any qualitative commentary that is captured for this declaration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EventName__c</fullName>
        <description>Event for which the declaration was captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>The declaration text.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to related party.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Declarations</relationshipLabel>
        <relationshipName>Declarations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Questionnaire, if declaration questions are derived from a questionnaire.</description>
        <label>Questionnaire</label>
        <referenceTo>tffa__Questionnaire__c</referenceTo>
        <relationshipLabel>Declarations</relationshipLabel>
        <relationshipName>Declarations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a mandatory or optional declaration</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source or the context of the declaration. Declarations are generally displayed at the end of the submission for every applicant. In addition there could be cases where declarations are connected to other data entry fields.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to parent submission.</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Declarations</relationshipLabel>
        <relationshipName>Declarations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>Value captured</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Declaration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Declarations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>